[project]
name = "motion-rainbow"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Gostovic",email = "oliver@phnq.org"}
]
readme = "README.md"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false