[project]
name = "motion-rainbow"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Gostovic",email = "oliver@phnq.org"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false